# tutorial-projects

event-driven-architecture-fullstack/: .gitignore  notes.md
event-driven-architecture-fullstack/backend/: pyproject.toml
event-driven-architecture-fullstack/backend/src/app/: consumers.py  main.py
event-driven-architecture-fullstack/frontend/: package-lock.json  package.json
fastapi-sklearn/: Dockerfile  docker-compose.yml  locustfile.py  requirements.txt
fastapi-sklearn/scripts/: test-no_batch.sh  test-with_batch.sh
go-svelte-sse/: main.go
go-svelte-sse/view/: jsconfig.json  package-lock.json  package.json
heroku-clone/: README.md
heroku-clone/herocool/: Pulumi.yaml  app.py  requirements.txt  sites.py  virtual_machines.py
heroku-clone/sitejs/: index.js  package-lock.json  package.json
k8s-tf_serving/: notes.md
k8s-tf_serving/resource/: deploy.sh  request.sh
kubeflow-pipeline-intro/: kubeflow-deploy.sh  pipeline.yaml  pipeline_complete.yaml  start-kind.sh  teardown.sh  tutorial.ipynb
merng-social-media/: config.example.js  index.js  notes.md  package-lock.json  package.json
merng-social-media/client/: package-lock.json  package.json
merng-social-media/util/: check-auth.js  validators.js
ray/: basics.ipynb  notes.md
ray/examples/: monte_carlo_estimation_pi.py
terraform-aws-dev-environment/: .gitignore  README.md
terraform-aws-dev-environment/terraform/: datasources.tf  main.tf  providers.tf  terraform.tfvars  userdata.tpl  variables.tf  windows-ssh-config.tpl
tf-serving-versioning/resource/: run.sh  test.sh
(+23 files in other folders)
