[tool.poetry]
authors = ["Hamish McCulloch"]
description = ""
name = "event-driven-api"
packages = [
  {include = "app", from = "src"},
]
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.82.0"
python = "^3.10"
redis-om = "^0.0.27"
uvicorn = "^0.18.3"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
server = "app.main:start"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
